fixed z-index of solitaire screen

--- a/src/style.css
+++ b/src/style.css
@@ -318,8 +318,10 @@ body {
 #game-buttons-div {
   border: 2px solid black;
   background-color: white;
-  height: 80vmin;
   width: 80vmin;
+  height: 80vmin;
+  max-height: 80vmin;
+  max-width: 80vmin;
   position: absolute;
   top: 32%;
   left: 50%;
@@ -337,6 +339,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: -100;
   /* pointer-events: none; */
 }
 
@@ -707,7 +710,10 @@ padding: 4%;
 
 
 
-
+#dev {
+  position: relative;
+  z-index: 2;
+}
 
 
 #solitaire {
@@ -715,5 +721,5 @@ padding: 4%;
   position: absolute;
   top: 12%;
   left: 24%;
-  z-index: -10;
+  z-index: 1;
 }
